@@ -1,5 +1,13 @@
 2005-10-07  Andy Wingo  <wingo@pobox.com>
 
+	* docs/gst/gstreamer-sections.txt: Update.
+
+	* gst/gstmessage.c (gst_message_new_application): Made into a
+	function like honest API calls.
+	(gst_message_new_element): New message type.
+
+	* gst/gstmessage.h (enum): Add GST_MESSAGE_ELEMENT type.
+
 	* check/elements/fakesrc.c (test_no_preroll): New check, checks
 	that setting a live fakesrc to PAUSED returns NO_PREROLL both
 	times.
